# chatlink_v2

./: .gitignore  Dockerfile  compile_proto.sh  docker-compose.yml
db/migrations/: V1__init.sql
frontend/: index.html  logs.html  users.html
frontend/scripts/: login.js  logs.js  users.js
frontend/styles/: main.css
ollama/: Dockerfile
proto/: whatsapp.proto
server/: Cargo.toml
server/src/: main.rs
whatsapp_bot/: Dockerfile.uv  manage.py  pyproject.toml
whatsapp_bot/src/ai/: agent.py  extractors.py  pipeline.py  post.py  prompts.py  schemas.py  utils.py
whatsapp_bot/src/api/: app.py
whatsapp_bot/src/cli/: parser.py
whatsapp_bot/src/config/: logging_setup.py
whatsapp_bot/src/core/: auth.py  database.py  qr.py
whatsapp_bot/src/grpc/: client.py  handlers.py
whatsapp_bot/src/mail/: mail_handler.py
whatsapp_bot/src/media/: audio.py  documents.py  ocr.py  sftp.py
whatsapp_bot/src/models/: __init__.py  client.py  message.py  order.py  product.py  user.py
whatsapp_bot/src/proto/: whatsapp_pb2.py  whatsapp_pb2_grpc.py
whatsapp_bot/src/whatsapp/: stream.py
whatsmeow_go/: Dockerfile  go.mod  go.sum  main.go
whatsmeow_go/src/grpc_handler/: handler.go  handler_test.go
whatsmeow_go/src/grpc_server/: server.go  server_test.go
whatsmeow_go/src/logger/: logger.go  logger_test.go
whatsmeow_go/src/proto/: whatsapp.pb.go  whatsapp_grpc.pb.go
whatsmeow_go/src/whatsapp/: devices.go  devices_test.go  login.go  message.go  message_test.go  server.go
