[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
bollard = { version = "0.19.2", features = ["chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
hyper = { version = "1.7.0", features = ["http1", "server"] }
mime_guess = "2.0.5"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
